# SmartSpeakerPI

./: .env.example  .gitignore  README.md  bootstrap_refactor.sh  logsCheatSheet.md  pyproject.toml  requirements.txt
baby_speaker/: config.py  main.py
baby_speaker/audio/: io.py  vad.py
baby_speaker/llm/: openai_chat.py
baby_speaker/memory/: memory.py
baby_speaker/runtime/: config.yaml
baby_speaker/runtime/prompts/: red_flags.txt  system.txt
baby_speaker/skills/: baby_assistant.py
baby_speaker/stt/: __init__.py  openai_stt.py
baby_speaker/tts/: openai_tts.py
baby_speaker/util/: logging.py
src/: muckabout.py
